objects/Contact.object
<CustomObject>
    <fields>
        <fullName>MailingAddress_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mailing Address Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MailingCity_Suggested__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry_Suggested__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode_Suggested__c</fullName>
        <label>Mailing ZIP/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState_Suggested__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet_Suggested__c</fullName>
        <inlineHelpText>This is the address to which any product notices or advisories will be sent.</inlineHelpText>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                    <isActive>false</isActive>
                    <label>Change</label>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <isActive>false</isActive>
                    <label>Duplicate</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                    <isActive>false</isActive>
                    <label>Retirement</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact_id__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>contact_summary_for_flow__c</fullName>
        <description>Used in a flow to show results of a user search.</description>
        <formula>IF(
RecordType.DeveloperName = &quot;us_physician&quot;,
FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot;, NPI# &quot; &amp; npi__c &amp; &quot;, &quot; &amp; MailingStreet &amp; &quot;, &quot; &amp; MailingCity &amp; &quot; &quot; &amp; MailingState &amp; &quot; &quot; &amp;  MailingPostalCode,
FirstName &amp; &quot; &quot; &amp; LastName &amp; &quot;, &quot; &amp; MailingStreet &amp; &quot;, &quot; &amp; MailingCity &amp; &quot; &quot; &amp; MailingState &amp; &quot; &quot; &amp;  MailingPostalCode)</formula>
        <label>Contact Summary for Flow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to auto-check or manually check, when contact record is verified by Experian or IQVia</description>
        <label>Contact Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>created_by_flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAFBIO-2142 used in the New Implant Procedure flow to specify the new physicians</description>
        <label>Created By Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>credentials__c</fullName>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crm_ranking__c</fullName>
        <label>CRM RANKING</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Target 1</fullName>
                </value>
                <value>
                    <fullName>Target 2</fullName>
                </value>
                <value>
                    <fullName>Target 3</fullName>
                </value>
                <value>
                    <fullName>Target 4</fullName>
                </value>
                <value>
                    <fullName>Unscored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>date_mailing_address_verified__c</fullName>
        <description>Date the address was verified by Expeian (invisible to the user)</description>
        <label>Date Address Verified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_of_birth_search__c</fullName>
        <description>Field shows the Date of birth as a string field</description>
        <label>Date of birth search</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_of_death__c</fullName>
        <description>Person date of death</description>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_death_unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if patient death date is unknown</description>
        <label>Date of Death unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_of_last_implant__c</fullName>
        <description>This field is filled in by a flow, that retrieves the lats date of implant.
If the patient date of death is before the procedure or event date then the system will disallow the user to submit the record.</description>
        <label>Date of last implant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_last_implant_after_death__c</fullName>
        <description>The checkbox should be ticked, if the date of death is before the date of last implant.</description>
        <formula>IF ( date_of_death__c  &gt;  date_of_last_implant__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of last implant after death</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_shipping_address_verified__c</fullName>
        <description>Updated during the Experian verification (invisible for the user)</description>
        <label>Date Address Verified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>decision_maker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that the contact is a decision maker</description>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>declined_to_provide_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Declined to Provide Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>declined_to_provide_dob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Declined to Provide DOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>declined_to_provide_phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Declined to Provide Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>declined_to_provide_ssn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Declined to Provide SSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>email_matches_user_s_email__c</fullName>
        <description>Used for reporting to catch Employee Contact records that have an email that doesn&apos;t match their User record.</description>
        <formula>IF(
RecordType.DeveloperName != &quot;X5500_Employee_Contact&quot;,
&quot;n/a&quot;,

IF(
AND(
RecordType.DeveloperName = &quot;X5500_Employee_Contact&quot;,
ISBLANK(user__c)),
&quot;No User Associated to Employee Contact&quot;,

IF(
AND(
RecordType.DeveloperName = &quot;X5500_Employee_Contact&quot;,
Email = user__r.Email),
&quot;Emails Match&quot;,

IF(
AND(
RecordType.DeveloperName = &quot;X5500_Employee_Contact&quot;,
Email != user__r.Email),
&quot;Emails Do NOT Match&quot;,

&quot;Unknown&quot;))))</formula>
        <label>Email Matches User&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enhanced_label__c</fullName>
        <description>SAFBIO-1772 updated formula</description>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName &amp; &apos;, &apos; &amp;  IF(ISNULL(Birthdate),&apos;&apos;, TEXT(Birthdate) &amp; &apos;, &apos;) &amp; MailingCity &amp; &apos;, &apos; &amp; TEXT(MailingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enhanced Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>following_physican_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invisible for the users. The checkbox is used to determine when a Patient record should be auto-assigned for a Permanent Patient ID card creation.</description>
        <label>Following physican changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>following_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the physician contact</description>
        <label>Following Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Patients Following</relationshipLabel>
        <relationshipName>ContactFollowingPhysician</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>following_physician_phone_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invisible for the users. The checkbox is used to determine when a Patient record should be auto-assigned for a Permanent Patient ID card creation.</description>
        <label>Following physician phone changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>graduation_year__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>has_orders_pending_cust_solutions_review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Orders pending Cust Solutions review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hm_agreement_consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that patient has consented, signed, and returned the Home Monitoring data usage agreement.</description>
        <label>HM Agreement (Consent)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hm_agreement_date__c</fullName>
        <description>This fields displays the date, when the checkbox (hm_agreement_consent__c) was changed to be &apos;true&apos;.</description>
        <label>HM Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hmsc_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator whether a patient has an active registration with the Home Monitoring Service Center.</description>
        <label>HMSC Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hmsc_registration_stringval__c</fullName>
        <description>This field is created purely for technical purpose and should not be added on any layout. Since, HMSC TWD is sending &apos;yes&apos; OR &apos;No&apos; value from CSV file, we can&apos;t insert these values directly, that&apos;s why this field is required.</description>
        <label>HMSC_Registration_StringVal</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>implanted_product_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invisible for the users. The checkbox is used to determine when a Patient record should be auto-assigned for a Permanent Patient ID card creation.</description>
        <label>Implanted product changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>implanted_product_new_patient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invisible for the users. The checkbox is used to determine when a Patient record should be auto-assigned for a Permanent Patient ID card creation.</description>
        <label>Implanted product for new patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>implanted_product_qualified_promri__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Invisible for the users. The checkbox is used to determine when a Patient record should be auto-assigned for a Permanent Patient ID card creation.</description>
        <label>Implanted Product qualified ProMRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>license__c</fullName>
        <label>License #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mail_block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mailing_address_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verification Status of the Patient Mailing Address, automatically updated by Experian</description>
        <inlineHelpText>Verification Status of the Patient Mailing Address</inlineHelpText>
        <label>Mailing Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>medicare_id__c</fullName>
        <label>Medicare ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mmis__c</fullName>
        <description>Unique identifier provided by a third party data provider (e.g. IMS Health) used for matching record to their database.</description>
        <label>MMIS #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mr_conditional_status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the patient&apos;s currently implanted system has been identified as MR conditional.</description>
        <label>MR Conditional Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mri_status_image__c</fullName>
        <formula>IF(
mr_conditional_status__c = True,
IMAGE(&quot;https://biotronik--c.eu8.content.force.com/servlet/servlet.FileDownload?file=0150N000006zSoU&quot;,&quot;MRI Conditional&quot;),
IMAGE(&quot;https://biotronik--c.eu8.content.force.com/servlet/servlet.FileDownload?file=0150N000006zSoP&quot;,&quot;Not MRI Conditional&quot;))</formula>
        <label>MRI Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npi__c</fullName>
        <description>National Provider Identifier (NPI) is a unique 10-digit identification number issued to health care providers in the United States by the Centers for Medicare and Medicaid Services (CMS).</description>
        <label>NPI #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_address_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verification Status of the Patient Other Address, automatically updated by Experian</description>
        <inlineHelpText>Verification Status of the Patient Other Address</inlineHelpText>
        <label>Other Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ous_patient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User has an ability mark the MDRF related Patient as OUS Patient</description>
        <label>OUS Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>override_by_aps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ProMRI Conditional status manually overridden by Advanced Product Support.</description>
        <label>Override by APS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient_id_card_created__c</fullName>
        <description>This field indicates whether a patient ID-card was created.</description>
        <label>Patient ID Card created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>patient_name_changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient name changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient_weight__c</fullName>
        <description>Patient Weight</description>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preferred_first_name__c</fullName>
        <description>Person Preferred Name</description>
        <inlineHelpText>The person&apos;s preferred full name.</inlineHelpText>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_specialty__c</fullName>
        <label>Primary Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promri_check_date__c</fullName>
        <description>Date of the last proMRI check. Set by ProMRICalloutHelper Class.</description>
        <label>proMRI Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>promri_check_status__c</fullName>
        <description>Status of the last proMRI check. Set by ProMRICalloutHelper Class.</description>
        <label>proMRI Check Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>MR Conditional - Successful</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>not MR Conditional - Product Combination not valid</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>not MR Conditional - Competitor Product implanted</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>not MR Conditional - No Country Code set</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Data Error – please proceed another check for details</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>proMRI call failed - Webservice not available</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>not MR Conditional - Capped Lead/Device</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>not MR Conditional - No Device implanted</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Manual override by APS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>reason_for_aps_override__c</fullName>
        <label>Reason for APS Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>related_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <description>All org units in SAP are uniquely identified with a company name and a company code with 4 digits, see API-Names.</description>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>school_name__c</fullName>
        <label>School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ship_date_of_id_card__c</fullName>
        <label>Ship Date of ID-Card</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>shipping_address_equals_mailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAFBIO-2575 // Syncs the mailing address to the shipping address</description>
        <inlineHelpText>Will overwrite the current shipping address with the current mailing address.</inlineHelpText>
        <label>Shipping Address as Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shipping_address_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verification Status of the Patient Shipping Address, automatically updated by Experian</description>
        <inlineHelpText>Verification Status of the Patient Shipping Address</inlineHelpText>
        <label>Shipping Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>shipping_city__c</fullName>
        <label>Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_country__c</fullName>
        <label>Other Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_state_province__c</fullName>
        <label>Other State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_street__c</fullName>
        <label>Other Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_zip_postal_code__c</fullName>
        <label>Other ZIP/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssn__c</fullName>
        <description>Social Security Number (US)</description>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssn_last_four_digits__c</fullName>
        <formula>RIGHT(ssn__c, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSN last 4 digits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trig_dob__c</fullName>
        <description>This field will be used during the matching rule, as we can not create a matching rule based on the date of birth, this filed will be filled with a trigger and used it as Date of birth then.</description>
        <label>Trig_DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Associate</fullName>
                </value>
                <value>
                    <fullName>Healthcare Administrator</fullName>
                </value>
                <value>
                    <fullName>Non-physician Healthcare Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vendor_id__c</fullName>
        <description>SAP vendor number</description>
        <label>Vendor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>verification__c</fullName>
        <label>Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Print_Perm_Non_ProMRI_Patient_ID_Card</fullName>
        <booleanFilter>1 AND 8 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Status__c</columns>
        <columns>ssn_last_four_digits__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>date_of_last_implant__c</columns>
        <columns>has_orders_pending_cust_solutions_review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.us_patient</value>
        </filters>
        <filters>
            <field>implanted_product_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>implanted_product_new_patient__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>following_physician_phone_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>patient_name_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>following_physican_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>implanted_product_qualified_promri__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>mr_conditional_status__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Print Perm Non-ProMRI Patient ID Card</label>
        <sharedTo>
            <role>BINC_Customer_Solutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Print_Permanent_Patient_ID_Card</fullName>
        <booleanFilter>1 AND 8 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Status__c</columns>
        <columns>ssn_last_four_digits__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>date_of_last_implant__c</columns>
        <columns>has_orders_pending_cust_solutions_review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.us_patient</value>
        </filters>
        <filters>
            <field>implanted_product_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>implanted_product_new_patient__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>following_physician_phone_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>patient_name_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>following_physican_changed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>implanted_product_qualified_promri__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>mr_conditional_status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Print Permanent ProMRI Patient ID Card</label>
        <sharedTo>
            <role>BINC_Customer_Solutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>date_of_death_after_last_implant</fullName>
        <columns>FULL_NAME</columns>
        <columns>date_of_death__c</columns>
        <columns>date_of_last_implant__c</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <columns>ssn_last_four_digits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>date_of_last_implant_after_death__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Date of Death after Last Implant</label>
        <sharedTo>
            <roleAndSubordinates>BINC_Medical_Device_Reporting</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Other_Contact</fullName>
        <active>true</active>
        <description>Healthcare administrator, non-physician healthcare  professional, business associate, etc.</description>
        <label>Other Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>X5500_Employee_Contact</fullName>
        <active>true</active>
        <label>5500_Employee Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>us_patient</fullName>
        <active>true</active>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>us_physician</fullName>
        <active>true</active>
        <label>Physician</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Capitalize_letter_for_first_name</fullName>
        <active>false</active>
        <description>This validation rule avoid the creation of the first name of the contact when it does not start with an upper case.</description>
        <errorConditionFormula>AND (
  Not($Permission.Validationrule_Exception),
  NOT(REGEX(FirstName, &quot;\\p{Lu}.*&quot;))
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please use capitalize letter for First Name</errorMessage>
    </validationRules>
</CustomObject>